[project]
name = "bach-ebay_data_scraper"
version = "1.0.0"
description = "RapidAPI: augsmachado/ebay-data-scraper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bach_ebay_data_scraper = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/bachstudio/bach-ebay_data_scraper"
Repository = "https://github.com/bachstudio/bach-ebay_data_scraper"
Documentation = "https://github.com/bachstudio/bach-ebay_data_scraper#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
path = "server.py"
pattern = '__version__ = "(?P<version>[^"]+)"'